questonable scroll button added

--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,17 @@ body {
 .buttons {
     padding: 10px 10px 10px 0;
 }
+
+.scroll {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+}
+
+.html {
+    scroll-behavior: smooth;
+}
+
+.scroll {
+    display: none;
+}
